Fix button widths for longer answers to not scrunch up and be hard to read
Former-commit-id: c8f2dc37c33f7892de002f0d54ffa4434a5afe8f

--- a/mofacts/public/styles/main.css
+++ b/mofacts/public/styles/main.css
@@ -486,7 +486,6 @@ input:checked + .slider:before {
 
 #multipleChoiceTable{
   margin: auto;
-  width: 50%;
   float: none;
 }
 
